crates/enumtrait/tests/invalid/quick_enum/tuple_variant_args.rs
#[enumtrait::quick_enum]
enum Invalid1 {
    Bing(i32, i32)
}

fn main() {}